--- a/trunk/application/configs/config.ini
+++ b/trunk/application/configs/config.ini
@@ -1,5 +1,5 @@
 [production]
-application.name    = Proiect licenta
+application.name    = Proiect licență
 application.baseUrl = 
 
 [development : production]
