Created the add to queue request.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -44,7 +44,7 @@ phpSettings.display_errors         = true
 resources.db.params.host     = "127.0.0.1"
 resources.db.params.username = "root"
 resources.db.params.password = ""
-resources.db.params.dbname   = "sure_bets"
+resources.db.params.dbname   = "licenta"
 resources.db.params.profiler.class = "Zend_Db_Profiler_Firebug"
 resources.db.params.profiler.enabled = true
 
