--- a/trunk/application/configs/application.ini
+++ b/trunk/application/configs/application.ini
@@ -23,6 +23,7 @@ resources.db.params.charset  = "UTF8"
 
 resources.view.helperPath       = APPLICATION_PATH "/../library/BundlePhu/View/Helper"
 resources.view.helperPathPrefix = "BundlePhu_View_Helper"
+;resources.view.helperPath.FlashMessanger = APPLICATION_PATH "/../library/Utility/View/Helper"
 resources.view.charset          = "UTF-8"
 resources.view.doctype          = "HTML5"
 
