--- a/trunk/application/configs/application.ini
+++ b/trunk/application/configs/application.ini
@@ -27,8 +27,8 @@ resources.view.helperPathPrefix = "BundlePhu_View_Helper"
 resources.view.charset          = "UTF-8"
 resources.view.doctype          = "HTML5"
 
-resources.frontController.controllerDirectory      = APPLICATION_PATH "/modules/default/controllers"
-resources.frontController.params.displayExceptions = false
+resources.frontController.controllerDirectory.default = APPLICATION_PATH "/modules/default/controllers"
+resources.frontController.params.displayExceptions    = false
 
 resources.layout.layoutPath = APPLICATION_PATH "/modules/default/views/layouts"
 
@@ -50,3 +50,14 @@ resources.db.params.profiler.class = "Zend_Db_Profiler_Firebug"
 resources.db.params.profiler.enabled = true
 
 resources.frontController.params.displayExceptions = true
+
+[cli : production]
+phpSettings.display_startup_errors = true
+phpSettings.display_errors         = true
+
+bootstrap.path  = APPLICATION_PATH "/modules/cli/CliBootstrap.php"
+bootstrap.class = "CliBootstrap"
+resources.frontController.controllerDirectory.cli = APPLICATION_PATH "/modules/cli/controllers"
+
+resources.view.helperPath       = 
+resources.view.helperPathPrefix = 
